This file documents the revision history for Perl extension Catalyst.

4.11  Wed Mar 02 11:00:00 2005
        - removed some warnings
        - improved docs
        - private prefixed actions override private non prefixed actions

4.10  Wed Mar 02 10:00:00 2005
        - improved documentation
        - fixed upload bug
        - fixed prefixed private actions bug
        - fixed more little bugs

4.01  Tue Mar 01 10:00:00 2005
        - improved documentation
        - documentation fixes (Johan Lindstrom)

4.00  Sun Feb 27 22:00:00 2005
        - more verbose debug messages, especially for forward()
        - implemented prefixed prvate actions, icluding built in
          !?default, !?begin and !?end
        - new Catalyst::Manual::Intro
        - new helpers, bin/catalyst
        - helper api

3.11  Wed Feb 23 21:00:00 2005
        - added dependency to UNIVERSAL::require (Marcus Ramberg)
        - added a little workaround for a warning in Catalyst::Test
          (Marcus Ramberg)
        - improved documentation for actions

3.10  Thu Feb 19 20:00:00 2005
        - removed roles management from Catalyst::Engine
          and added it to Catalyst::Plugin::Authentication::CDBI

3.04  Thu Feb 17 21:00:00 2005
        - error reporting for app class
        - no more engine debug messages
        - class->method forwards get resolved now

3.03  Wed Feb 16 23:00:00 2005
        - friendlier statistics

3.02  Wed Feb 16 22:00:00 2005
        - fixed unintialized actions (Marcus Ramberg)

3.01  Wed Feb 16 20:30:00 2005
        - better statistics

3.00  Wed Feb 16 20:00:00 2005
        - real version number for CPAN.pm
        - fixed redirect in CGI engine
        - more statistics in debug logs
        - ? prefix for forward()

2.99_15  Wed Feb 02 22:00:00 2005
        - support for short namespaces, MyApp::M, MyApp::V and MyApp::C
        - Replaced "Catched" with "Caught" in Catalyst::Engine
          (Gary Ashton Jones)