@@ -5,7 +5,7 @@ use base 'Class::Accessor::Fast';
 
 __PACKAGE__->mk_accessors(
     qw/action arguments base cookies headers match method parameters path
-      snippets uploads/
+      server_base snippets uploads/
 );
 
 *args   = \&arguments;
@@ -76,6 +76,10 @@ Contains the path.
 Contains the request method.
 
     print $c->request->method
+
+=head3 server_base
+
+Contains the server part of the uri base.
 
 =head3 snippets
 
